# lic

./: CODE_OF_CONDUCT.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: release-homebrew.yml
Formula/: lic.rb
src/lic_cli/: cli.py
